{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 124,
  "lineage": "965b0407-7c02-269d-6940-f20434f402c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b436de22e0831ad6",
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:elastic-ip/eipalloc-0b436de22e0831ad6",
            "domain": "vpc",
            "id": "eipalloc-0b436de22e0831ad6",
            "network_border_group": "ap-northeast-3",
            "private_dns": "ip-10-0-1-115.ap-northeast-3.compute.internal",
            "public_dns": "ec2-15-168-227-11.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.168.227.11",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ef3193cda2ac9d4",
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:instance/i-07d27deba951908b4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d27deba951908b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aaaab4aae5815659",
            "private_dns": "ip-10-0-1-187.ap-northeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.187",
            "public_dns": "ec2-13-208-192-148.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "13.208.192.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-084738d96be065a8a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acc4e9b1725c1b88",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d8467fbe78792ad"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair_2413618",
            "aws_security_group.allow_ssh_2413618",
            "aws_subnet.main_pub_1_2413618",
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_gw_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:internet-gateway/igw-06984d698c3c38d01",
            "id": "igw-06984d698c3c38d01",
            "owner_id": "910798360272",
            "tags": {
              "Name": "main_gw"
            },
            "tags_all": {
              "Name": "main_gw"
            },
            "vpc_id": "vpc-0afb8bb695eaf2b2b"
          },
          "dependencies": [
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b436de22e0831ad6",
            "association_id": "eipassoc-089151b1b397c415f",
            "connectivity_type": "public",
            "id": "nat-04b7582760ef6d154",
            "network_interface_id": "eni-000e398615cc04a1c",
            "private_ip": "10.0.1.57",
            "public_ip": "15.168.227.11",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0acc4e9b1725c1b88"
          },
          "dependencies": [
            "aws_eip.nat_2413618",
            "aws_internet_gateway.main_gw_2413618",
            "aws_subnet.main_pub_1_2413618",
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_private_1_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:route-table/rtb-0965d918dbddff99e",
            "id": "rtb-0965d918dbddff99e",
            "owner_id": "910798360272",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b7582760ef6d154",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-1"
            },
            "tags_all": {
              "Name": "main-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb8bb695eaf2b2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_2413618",
            "aws_internet_gateway.main_gw_2413618",
            "aws_nat_gateway.nat_gw_2413618",
            "aws_subnet.main_pub_1_2413618",
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_private_2_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:route-table/rtb-04d20ba3ae2b98cbf",
            "id": "rtb-04d20ba3ae2b98cbf",
            "owner_id": "910798360272",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afb8bb695eaf2b2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_public_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:route-table/rtb-0bc20b3d8277ec73c",
            "id": "rtb-0bc20b3d8277ec73c",
            "owner_id": "910798360272",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main_public_1"
            },
            "tags_all": {
              "Name": "main_public_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb8bb695eaf2b2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_pri_1_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062218bb54eccf2e1",
            "route_table_id": "rtb-0bc20b3d8277ec73c",
            "subnet_id": "subnet-0c524f5aa122253e4"
          },
          "dependencies": [
            "aws_route_table.main_public_2413618",
            "aws_subnet.main_pri_1_2413618",
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_private_2_a_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054df324e74d0f17e",
            "route_table_id": "rtb-04d20ba3ae2b98cbf",
            "subnet_id": "subnet-068525db04feed469"
          },
          "dependencies": [
            "aws_route_table.main_private_2_2413618",
            "aws_subnet.main_pri_2_2413618",
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_pub_1_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c52f69844535571f",
            "route_table_id": "rtb-0bc20b3d8277ec73c",
            "subnet_id": "subnet-0acc4e9b1725c1b88"
          },
          "dependencies": [
            "aws_route_table.main_public_2413618",
            "aws_subnet.main_pub_1_2413618",
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:security-group/sg-00d8467fbe78792ad",
            "description": "security group that allow ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d8467fbe78792ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_2413618",
            "name_prefix": "",
            "owner_id": "910798360272",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow_ssh"
            },
            "tags_all": {
              "name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb8bb695eaf2b2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_pri_1_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:subnet/subnet-0c524f5aa122253e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c524f5aa122253e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910798360272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-pri-1"
            },
            "tags_all": {
              "Name": "main-pri-1"
            },
            "vpc_id": "vpc-0afb8bb695eaf2b2b"
          },
          "dependencies": [
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_pri_2_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:subnet/subnet-068525db04feed469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068525db04feed469",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910798360272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-pri-2"
            },
            "tags_all": {
              "Name": "main-pri-2"
            },
            "vpc_id": "vpc-0afb8bb695eaf2b2b"
          },
          "dependencies": [
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_pub_1_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:subnet/subnet-0acc4e9b1725c1b88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acc4e9b1725c1b88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910798360272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-pub-1"
            },
            "tags_all": {
              "Name": "main-pub-1"
            },
            "vpc_id": "vpc-0afb8bb695eaf2b2b"
          },
          "dependencies": [
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_pub_2_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:subnet/subnet-0b7ba6f6687c65251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7ba6f6687c65251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910798360272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-pub-2"
            },
            "tags_all": {
              "Name": "main-pub-2"
            },
            "vpc_id": "vpc-0afb8bb695eaf2b2b"
          },
          "dependencies": [
            "aws_vpc.main_2413618"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_2413618",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:910798360272:vpc/vpc-0afb8bb695eaf2b2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e03823502b09634",
            "default_route_table_id": "rtb-04b263c7ee8f7c56a",
            "default_security_group_id": "sg-05f59c31dd6efaaf6",
            "dhcp_options_id": "dopt-02f9b6f4e8f7712b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0afb8bb695eaf2b2b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b263c7ee8f7c56a",
            "owner_id": "910798360272",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}